added report method for users + check available report and delete report by id for admins
